force-app/main/default/objects/InvoiceRefund__c/InvoiceRefund__c.object-meta.xml
<CustomObject>
    <label>Invoice Refund</label>
    <nameField>
        <displayFormat>InvRef-{000000}</displayFormat>
        <label>Invoice Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>