force-app/main/default/objects/InvoiceRefund__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <label>Refund</label>
    <referenceTo>Refund__c</referenceTo>
    <relationshipLabel>Invoice Refunds</relationshipLabel>
    <relationshipName>Invoice_Refunds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>